// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReleaseNotesRender component > should render correctly - no release notes 1`] = `
<div>
  <div
    class="release-notes-container mx-auto max-w-4xl p-6 lg:px-0 items-center text-center justify-center"
  >
    <div
      class="self-stretch text-center text-lightgrey text-[20px] font-normal leading-[140%] mx-auto max-w-[860px] px-2 w-full mb-4"
    >
      <h2
        class="release-notes-title"
      >
        release_name_mock
      </h2>
    </div>
    <div
      class="pt-3"
      style="display: flex; justify-content: center; height: 100%;"
    >
      <div
        class="max-w-6xl"
        style="flex-grow: 1;"
      >
        <div
          class="bg-gradient-to-br from-[#200E46]/90 to-[#2B1A4F]/90 rounded-3xl border border-white/20 shadow-lg p-8 text-center"
        >
          <h2
            class="release-notes-title mb-4"
          >
            Text
          </h2>
          <span
            class="text-white/80 text-lg"
          >
            Text
             
            <code
              class="bg-[#14003c] px-2 py-1 rounded text-pink"
            >
              ?version=x.x.x
            </code>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ReleaseNotesRender component > should render correctly - version not defined 1`] = `
<div>
  <div
    class="release-notes-container mx-auto max-w-4xl p-6 lg:px-0 items-center text-center justify-center"
  >
    <div
      class="self-stretch text-center text-lightgrey text-[20px] font-normal leading-[140%] mx-auto max-w-[860px] px-2 w-full mb-4"
    >
      <h2
        class="release-notes-title"
      >
        release_name_mock
      </h2>
    </div>
    <div
      class="pt-3"
      style="display: flex; justify-content: center; height: 100%;"
    >
      <div
        class="max-w-6xl"
        style="flex-grow: 1;"
      >
        <p
          class="release-notes-description"
        >
          Text
        </p>
        <p
          class="release-notes-description"
        >
          <strong>
            The total number of fixes marked as P1 is: 2
          </strong>
        </p>
        <div
          class="MuiDataGrid-root MuiDataGrid-autoHeight MuiDataGrid-root--densityStandard MuiDataGrid-withBorderColor MuiDataGridVariables-3851315942 css-sxww09-MuiDataGrid-root"
          style="--DataGrid-hasScrollX: 1; --DataGrid-hasScrollY: 0; --DataGrid-scrollbarSize: 0px; --DataGrid-rowWidth: 1390px; --DataGrid-columnsTotalWidth: 1390px; --DataGrid-leftPinnedWidth: 0px; --DataGrid-rightPinnedWidth: 0px; --DataGrid-headerHeight: 56px; --DataGrid-headersTotalHeight: 56px; --DataGrid-topContainerHeight: 56px; --DataGrid-bottomContainerHeight: 0px; --height: 52px;"
        >
          <div
            class="MuiDataGrid-mainContent"
            role="presentation"
          >
            <div
              aria-colcount="5"
              aria-label="Release Notes"
              aria-multiselectable="false"
              aria-rowcount="3"
              class="MuiDataGrid-main css-1bgckiu-MuiDataGrid-main"
              role="grid"
              tabindex="-1"
            >
              <div
                class="css-18l11qw"
                data-id="gridPanelAnchor"
                role="presentation"
              />
              <div
                class="MuiDataGrid-virtualScroller MuiDataGrid-virtualScroller--hasScrollX css-1vigakz-MuiDataGrid-virtualScroller"
                role="presentation"
                style="overflow-x: hidden; overflow-y: hidden;"
              >
                <div
                  class="MuiDataGrid-topContainer MuiDataGrid-container--top css-b1wygl"
                  role="presentation"
                >
                  <div
                    class="MuiDataGrid-columnHeaders css-1gtv474-MuiDataGrid-columnHeaders"
                    role="presentation"
                  >
                    <div
                      aria-rowindex="1"
                      class="MuiDataGrid-row--borderBottom css-yseucu-MuiDataGrid-columnHeaderRow"
                      role="row"
                      style="height: 56px;"
                    >
                      <div
                        role="presentation"
                        style="width: 0px;"
                      />
                      <div
                        aria-colindex="1"
                        aria-sort="ascending"
                        class="MuiDataGrid-columnHeader MuiDataGrid-columnHeader--sortable MuiDataGrid-columnHeader--sorted MuiDataGrid-withBorderColor"
                        data-field="priority"
                        role="columnheader"
                        style="width: 120px;"
                        tabindex="0"
                      >
                        <div
                          class="MuiDataGrid-columnHeaderDraggableContainer"
                          draggable="false"
                          role="presentation"
                        >
                          <div
                            class="MuiDataGrid-columnHeaderTitleContainer"
                            role="presentation"
                          >
                            <div
                              class="MuiDataGrid-columnHeaderTitleContainerContent"
                            >
                              <div
                                class="MuiDataGrid-columnHeaderTitle css-1gqmilo-MuiDataGrid-columnHeaderTitle"
                                data-mui-internal-clone-element="true"
                              >
                                Priority
                              </div>
                            </div>
                            <div
                              class="MuiDataGrid-iconButtonContainer css-ltf0zy-MuiDataGrid-iconButtonContainer"
                            >
                              <button
                                aria-label="Sort"
                                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-sortButton css-1vkrt00-MuiButtonBase-root-MuiIconButton-root-MuiDataGrid-sortButton"
                                field="priority"
                                tabindex="-1"
                                title="Sort"
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall MuiDataGrid-sortIcon css-120dh41-MuiSvgIcon-root"
                                  data-testid="ArrowUpwardIcon"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                          <div
                            class="MuiDataGrid-menuIcon"
                          >
                            <button
                              aria-expanded="false"
                              aria-haspopup="menu"
                              aria-label="Priority column menu"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-menuIconButton css-155wbr6-MuiButtonBase-root-MuiIconButton-root"
                              data-mui-internal-clone-element="true"
                              id="«r15»"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                                data-testid="TripleDotsVerticalIcon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                        <div
                          class="MuiDataGrid-columnSeparator MuiDataGrid-columnSeparator--resizable MuiDataGrid-columnSeparator--sideRight"
                          style="min-height: 56px;"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiDataGrid-iconSeparator css-1umw9bq-MuiSvgIcon-root"
                            data-testid="SeparatorIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <rect
                              height="24"
                              rx="0.5"
                              width="1"
                              x="11.5"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        aria-colindex="2"
                        aria-sort="none"
                        class="MuiDataGrid-columnHeader MuiDataGrid-withBorderColor"
                        data-field="type"
                        role="columnheader"
                        style="width: 130px;"
                        tabindex="-1"
                      >
                        <div
                          class="MuiDataGrid-columnHeaderDraggableContainer"
                          draggable="false"
                          role="presentation"
                        >
                          <div
                            class="MuiDataGrid-columnHeaderTitleContainer"
                            role="presentation"
                          >
                            <div
                              class="MuiDataGrid-columnHeaderTitleContainerContent"
                            >
                              <div
                                class="MuiDataGrid-columnHeaderTitle css-1gqmilo-MuiDataGrid-columnHeaderTitle"
                                data-mui-internal-clone-element="true"
                              >
                                Type
                              </div>
                            </div>
                          </div>
                          <div
                            class="MuiDataGrid-menuIcon"
                          >
                            <button
                              aria-expanded="false"
                              aria-haspopup="menu"
                              aria-label="Type column menu"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-menuIconButton css-155wbr6-MuiButtonBase-root-MuiIconButton-root"
                              data-mui-internal-clone-element="true"
                              id="«r1b»"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                                data-testid="TripleDotsVerticalIcon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                        <div
                          class="MuiDataGrid-columnSeparator MuiDataGrid-columnSeparator--resizable MuiDataGrid-columnSeparator--sideRight"
                          style="min-height: 56px;"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiDataGrid-iconSeparator css-1umw9bq-MuiSvgIcon-root"
                            data-testid="SeparatorIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <rect
                              height="24"
                              rx="0.5"
                              width="1"
                              x="11.5"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        aria-colindex="3"
                        aria-sort="none"
                        class="MuiDataGrid-columnHeader MuiDataGrid-withBorderColor"
                        data-field="component"
                        role="columnheader"
                        style="width: 180px;"
                        tabindex="-1"
                      >
                        <div
                          class="MuiDataGrid-columnHeaderDraggableContainer"
                          draggable="false"
                          role="presentation"
                        >
                          <div
                            class="MuiDataGrid-columnHeaderTitleContainer"
                            role="presentation"
                          >
                            <div
                              class="MuiDataGrid-columnHeaderTitleContainerContent"
                            >
                              <div
                                class="MuiDataGrid-columnHeaderTitle css-1gqmilo-MuiDataGrid-columnHeaderTitle"
                                data-mui-internal-clone-element="true"
                              >
                                Component
                              </div>
                            </div>
                          </div>
                          <div
                            class="MuiDataGrid-menuIcon"
                          >
                            <button
                              aria-expanded="false"
                              aria-haspopup="menu"
                              aria-label="Component column menu"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-menuIconButton css-155wbr6-MuiButtonBase-root-MuiIconButton-root"
                              data-mui-internal-clone-element="true"
                              id="«r1g»"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                                data-testid="TripleDotsVerticalIcon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                        <div
                          class="MuiDataGrid-columnSeparator MuiDataGrid-columnSeparator--resizable MuiDataGrid-columnSeparator--sideRight"
                          style="min-height: 56px;"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiDataGrid-iconSeparator css-1umw9bq-MuiSvgIcon-root"
                            data-testid="SeparatorIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <rect
                              height="24"
                              rx="0.5"
                              width="1"
                              x="11.5"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        aria-colindex="4"
                        aria-sort="none"
                        class="MuiDataGrid-columnHeader MuiDataGrid-withBorderColor"
                        data-field="id"
                        role="columnheader"
                        style="width: 160px;"
                        tabindex="-1"
                      >
                        <div
                          class="MuiDataGrid-columnHeaderDraggableContainer"
                          draggable="false"
                          role="presentation"
                        >
                          <div
                            class="MuiDataGrid-columnHeaderTitleContainer"
                            role="presentation"
                          >
                            <div
                              class="MuiDataGrid-columnHeaderTitleContainerContent"
                            >
                              <div
                                class="MuiDataGrid-columnHeaderTitle css-1gqmilo-MuiDataGrid-columnHeaderTitle"
                                data-mui-internal-clone-element="true"
                              >
                                Issue
                              </div>
                            </div>
                          </div>
                          <div
                            class="MuiDataGrid-menuIcon"
                          >
                            <button
                              aria-expanded="false"
                              aria-haspopup="menu"
                              aria-label="Issue column menu"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-menuIconButton css-155wbr6-MuiButtonBase-root-MuiIconButton-root"
                              data-mui-internal-clone-element="true"
                              id="«r1l»"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                                data-testid="TripleDotsVerticalIcon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                        <div
                          class="MuiDataGrid-columnSeparator MuiDataGrid-columnSeparator--resizable MuiDataGrid-columnSeparator--sideRight"
                          style="min-height: 56px;"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiDataGrid-iconSeparator css-1umw9bq-MuiSvgIcon-root"
                            data-testid="SeparatorIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <rect
                              height="24"
                              rx="0.5"
                              width="1"
                              x="11.5"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        aria-colindex="5"
                        aria-sort="none"
                        class="MuiDataGrid-columnHeader MuiDataGrid-withBorderColor MuiDataGrid-columnHeader--lastUnpinned MuiDataGrid-columnHeader--last"
                        data-field="title"
                        role="columnheader"
                        style="width: 800px;"
                        tabindex="-1"
                      >
                        <div
                          class="MuiDataGrid-columnHeaderDraggableContainer"
                          draggable="false"
                          role="presentation"
                        >
                          <div
                            class="MuiDataGrid-columnHeaderTitleContainer"
                            role="presentation"
                          >
                            <div
                              class="MuiDataGrid-columnHeaderTitleContainerContent"
                            >
                              <div
                                class="MuiDataGrid-columnHeaderTitle css-1gqmilo-MuiDataGrid-columnHeaderTitle"
                                data-mui-internal-clone-element="true"
                              >
                                Title
                              </div>
                            </div>
                          </div>
                          <div
                            class="MuiDataGrid-menuIcon"
                          >
                            <button
                              aria-expanded="false"
                              aria-haspopup="menu"
                              aria-label="Title column menu"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-menuIconButton css-155wbr6-MuiButtonBase-root-MuiIconButton-root"
                              data-mui-internal-clone-element="true"
                              id="«r1q»"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                                data-testid="TripleDotsVerticalIcon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                        <div
                          class="MuiDataGrid-columnSeparator MuiDataGrid-columnSeparator--resizable MuiDataGrid-columnSeparator--sideRight"
                          style="min-height: 56px;"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiDataGrid-iconSeparator css-1umw9bq-MuiSvgIcon-root"
                            data-testid="SeparatorIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <rect
                              height="24"
                              rx="0.5"
                              width="1"
                              x="11.5"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="MuiDataGrid-filler"
                        role="presentation"
                      />
                      <div
                        class="MuiDataGrid-scrollbarFiller MuiDataGrid-scrollbarFiller--header"
                        role="presentation"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="MuiDataGrid-virtualScrollerContent css-aymtem-MuiDataGrid-virtualScrollerContent"
                  role="presentation"
                  style="width: auto; flex-basis: 104px; flex-shrink: 0;"
                >
                  <div
                    class="MuiDataGrid-virtualScrollerRenderZone css-11dqcl8-MuiDataGrid-virtualScrollerRenderZone"
                    role="rowgroup"
                    style="transform: translate3d(0, 0px, 0);"
                  >
                    <div
                      aria-rowindex="2"
                      class="MuiDataGrid-row MuiDataGrid-row--firstVisible MuiDataGrid-row--dynamicHeight"
                      data-id="0"
                      data-rowindex="0"
                      role="row"
                      style="max-height: none; min-height: auto; --height: auto;"
                    >
                      <div
                        class="MuiDataGrid-cellOffsetLeft"
                        role="presentation"
                        style="width: 0px;"
                      />
                      <div
                        aria-colindex="1"
                        aria-colspan="1"
                        aria-rowspan="1"
                        class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                        data-colindex="0"
                        data-field="priority"
                        role="gridcell"
                        style="--width: 120px;"
                        tabindex="-1"
                      >
                        <span
                          class="badge bg-secondary priority-1"
                          title="P1 - Blocks development and/or testing work, production could not run."
                        >
                          P1
                        </span>
                      </div>
                      <div
                        aria-colindex="2"
                        aria-colspan="1"
                        aria-rowspan="1"
                        class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                        data-colindex="1"
                        data-field="type"
                        role="gridcell"
                        style="--width: 130px;"
                        tabindex="-1"
                      >
                        <span>
                          Bug
                        </span>
                      </div>
                      <div
                        aria-colindex="3"
                        aria-colspan="1"
                        aria-rowspan="1"
                        class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                        data-colindex="2"
                        data-field="component"
                        role="gridcell"
                        style="--width: 180px;"
                        tabindex="-1"
                        title="component_mock"
                      >
                        component_mock
                      </div>
                      <div
                        aria-colindex="4"
                        aria-colspan="1"
                        aria-rowspan="1"
                        class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                        data-colindex="3"
                        data-field="id"
                        role="gridcell"
                        style="--width: 160px;"
                        tabindex="-1"
                      >
                        <a
                          class="issue-link"
                          href="https://link_mock/"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          0
                        </a>
                      </div>
                      <div
                        aria-colindex="5"
                        aria-colspan="1"
                        aria-rowspan="1"
                        class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                        data-colindex="4"
                        data-field="title"
                        role="gridcell"
                        style="--width: 800px;"
                        tabindex="-1"
                        title="title_mock"
                      >
                        title_mock
                      </div>
                      <div
                        class="MuiDataGrid-cell MuiDataGrid-cellEmpty"
                        role="presentation"
                      />
                    </div>
                    <div
                      aria-rowindex="3"
                      class="MuiDataGrid-row MuiDataGrid-row--lastVisible MuiDataGrid-row--dynamicHeight"
                      data-id="1"
                      data-rowindex="1"
                      role="row"
                      style="max-height: none; min-height: auto; --height: auto;"
                    >
                      <div
                        class="MuiDataGrid-cellOffsetLeft"
                        role="presentation"
                        style="width: 0px;"
                      />
                      <div
                        aria-colindex="1"
                        aria-colspan="1"
                        aria-rowspan="1"
                        class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                        data-colindex="0"
                        data-field="priority"
                        role="gridcell"
                        style="--width: 120px;"
                        tabindex="-1"
                      >
                        <span
                          class="badge bg-secondary priority-1"
                          title="P1 - Blocks development and/or testing work, production could not run."
                        >
                          P1
                        </span>
                      </div>
                      <div
                        aria-colindex="2"
                        aria-colspan="1"
                        aria-rowspan="1"
                        class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                        data-colindex="1"
                        data-field="type"
                        role="gridcell"
                        style="--width: 130px;"
                        tabindex="-1"
                      >
                        <span>
                          Bug
                        </span>
                      </div>
                      <div
                        aria-colindex="3"
                        aria-colspan="1"
                        aria-rowspan="1"
                        class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                        data-colindex="2"
                        data-field="component"
                        role="gridcell"
                        style="--width: 180px;"
                        tabindex="-1"
                        title="component_mock"
                      >
                        component_mock
                      </div>
                      <div
                        aria-colindex="4"
                        aria-colspan="1"
                        aria-rowspan="1"
                        class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                        data-colindex="3"
                        data-field="id"
                        role="gridcell"
                        style="--width: 160px;"
                        tabindex="-1"
                      >
                        <a
                          class="issue-link"
                          href="https://link_mock/"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          1
                        </a>
                      </div>
                      <div
                        aria-colindex="5"
                        aria-colspan="1"
                        aria-rowspan="1"
                        class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                        data-colindex="4"
                        data-field="title"
                        role="gridcell"
                        style="--width: 800px;"
                        tabindex="-1"
                        title="title_mock"
                      >
                        title_mock
                      </div>
                      <div
                        class="MuiDataGrid-cell MuiDataGrid-cellEmpty"
                        role="presentation"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="MuiDataGrid-bottomContainer MuiDataGrid-container--bottom css-gzxaox"
                  role="presentation"
                />
              </div>
              <div
                aria-hidden="true"
                class="MuiDataGrid-scrollbar MuiDataGrid-scrollbar--horizontal css-2n9dey"
                tabindex="-1"
              >
                <div
                  class="MuiDataGrid-scrollbarContent"
                />
              </div>
            </div>
            <div
              class="MuiDataGrid-footerContainer MuiDataGrid-withBorderColor css-15lx25q-MuiDataGrid-footerContainer"
            >
              <div />
              <div
                class="MuiTablePagination-root css-y1ejz4-MuiTablePagination-root"
              >
                <div
                  class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular MuiTablePagination-toolbar css-1gak8h1-MuiToolbar-root-MuiTablePagination-toolbar"
                >
                  <div
                    class="MuiTablePagination-spacer css-1wtxofq-MuiTablePagination-spacer"
                  />
                  <p
                    class="MuiTablePagination-selectLabel css-s09cke-MuiTablePagination-selectLabel"
                    id="«r10»"
                  >
                    Rows per page:
                  </p>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary MuiTablePagination-select MuiSelect-root MuiTablePagination-input css-oegngy-MuiInputBase-root-MuiTablePagination-select"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="«r10» «rv»"
                      class="MuiSelect-select MuiTablePagination-select MuiSelect-standard MuiInputBase-input css-mmygx2-MuiSelect-select-MuiInputBase-input"
                      id="«rv»"
                      role="combobox"
                      tabindex="0"
                    >
                      20
                    </div>
                    <input
                      aria-hidden="true"
                      aria-invalid="false"
                      class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
                      tabindex="-1"
                      value="20"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiTablePagination-selectIcon MuiSelect-iconStandard css-1gpuzre-MuiSvgIcon-root-MuiSelect-icon"
                      data-testid="ArrowDropDownIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                  </div>
                  <p
                    class="MuiTablePagination-displayedRows css-11cfq65-MuiTablePagination-displayedRows"
                  >
                    1–2 of 2
                  </p>
                  <div
                    class="MuiTablePaginationActions-root MuiTablePagination-actions css-sjsoon-MuiTablePaginationActions-root"
                  >
                    <button
                      aria-label="Go to previous page"
                      class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-colorInherit MuiIconButton-sizeMedium css-h7cjts-MuiButtonBase-root-MuiIconButton-root"
                      disabled=""
                      tabindex="-1"
                      title="Go to previous page"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                        data-testid="KeyboardArrowLeftIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                        />
                      </svg>
                    </button>
                    <button
                      aria-label="Go to next page"
                      class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-colorInherit MuiIconButton-sizeMedium css-h7cjts-MuiButtonBase-root-MuiIconButton-root"
                      disabled=""
                      tabindex="-1"
                      title="Go to next page"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                        data-testid="KeyboardArrowRightIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <style
            href="/MuiDataGridVariables-3851315942"
          >
            .MuiDataGridVariables-3851315942{--DataGrid-t-spacing-unit:8px;--DataGrid-t-color-border-base:rgba(224, 224, 224, 1);--DataGrid-t-color-background-base:#fff;--DataGrid-t-color-background-overlay:#fff;--DataGrid-t-color-background-backdrop:rgba(255, 255, 255, 0.38);--DataGrid-t-color-foreground-base:rgba(0, 0, 0, 0.87);--DataGrid-t-color-foreground-muted:rgba(0, 0, 0, 0.6);--DataGrid-t-color-foreground-accent:#1565c0;--DataGrid-t-color-foreground-disabled:rgba(0, 0, 0, 0.38);--DataGrid-t-color-foreground-error:#c62828;--DataGrid-t-color-interactive-hover:rgba(0, 0, 0, 0.04);--DataGrid-t-color-interactive-hover-opacity:0.04;--DataGrid-t-color-interactive-focus:rgba(from #1976d2 r g b / 1);--DataGrid-t-color-interactive-focus-opacity:0.12;--DataGrid-t-color-interactive-disabled:rgba(from rgba(0, 0, 0, 0.26) r g b / 1);--DataGrid-t-color-interactive-disabled-opacity:0.38;--DataGrid-t-color-interactive-selected:#1976d2;--DataGrid-t-color-interactive-selected-opacity:0.08;--DataGrid-t-header-background-base:#fff;--DataGrid-t-cell-background-pinned:#fff;--DataGrid-t-radius-base:4px;--DataGrid-t-typography-font-family-base:"Roboto", "Helvetica", "Arial", sans-serif;--DataGrid-t-typography-font-weight-light:300;--DataGrid-t-typography-font-weight-regular:400;--DataGrid-t-typography-font-weight-medium:500;--DataGrid-t-typography-font-weight-bold:700;--DataGrid-t-typography-font-body:400 0.875rem / 1.43 "Roboto", "Helvetica", "Arial", sans-serif;--DataGrid-t-typography-font-small:400 0.75rem / 1.66 "Roboto", "Helvetica", "Arial", sans-serif;--DataGrid-t-typography-font-large:400 1rem / 1.5 "Roboto", "Helvetica", "Arial", sans-serif;--DataGrid-t-transition-easing-ease-in:cubic-bezier(0.4, 0, 1, 1);--DataGrid-t-transition-easing-ease-out:cubic-bezier(0.0, 0, 0.2, 1);--DataGrid-t-transition-easing-ease-in-out:cubic-bezier(0.4, 0, 0.2, 1);--DataGrid-t-transition-duration-short:200ms;--DataGrid-t-transition-duration-base:250ms;--DataGrid-t-transition-duration-long:300ms;--DataGrid-t-shadow-base:0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);--DataGrid-t-shadow-overlay:0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);--DataGrid-t-z-index-panel:1300;--DataGrid-t-z-index-menu:1300;}
          </style>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ReleaseNotesRender component > should render correctly 1`] = `
<div>
  <div
    class="release-notes-container mx-auto max-w-4xl p-6 lg:px-0 items-center text-center justify-center"
  >
    <div
      class="self-stretch text-center text-lightgrey text-[20px] font-normal leading-[140%] mx-auto max-w-[860px] px-2 w-full mb-4"
    >
      <h2
        class="release-notes-title"
      >
        release_name_mock
      </h2>
    </div>
    <div
      class="pt-3"
      style="display: flex; justify-content: center; height: 100%;"
    >
      <div
        class="max-w-6xl"
        style="flex-grow: 1;"
      >
        <p
          class="release-notes-description"
        >
          Text
        </p>
        <p
          class="release-notes-description"
        >
          <strong>
            The total number of fixes marked as P1 is: 2
          </strong>
        </p>
        <div
          class="MuiDataGrid-root MuiDataGrid-autoHeight MuiDataGrid-root--densityStandard MuiDataGrid-withBorderColor MuiDataGridVariables-3851315942 css-sxww09-MuiDataGrid-root"
          style="--DataGrid-hasScrollX: 1; --DataGrid-hasScrollY: 0; --DataGrid-scrollbarSize: 0px; --DataGrid-rowWidth: 1390px; --DataGrid-columnsTotalWidth: 1390px; --DataGrid-leftPinnedWidth: 0px; --DataGrid-rightPinnedWidth: 0px; --DataGrid-headerHeight: 56px; --DataGrid-headersTotalHeight: 56px; --DataGrid-topContainerHeight: 56px; --DataGrid-bottomContainerHeight: 0px; --height: 52px;"
        >
          <div
            class="MuiDataGrid-mainContent"
            role="presentation"
          >
            <div
              aria-colcount="5"
              aria-label="Release Notes"
              aria-multiselectable="false"
              aria-rowcount="3"
              class="MuiDataGrid-main css-1bgckiu-MuiDataGrid-main"
              role="grid"
              tabindex="-1"
            >
              <div
                class="css-18l11qw"
                data-id="gridPanelAnchor"
                role="presentation"
              />
              <div
                class="MuiDataGrid-virtualScroller MuiDataGrid-virtualScroller--hasScrollX css-1vigakz-MuiDataGrid-virtualScroller"
                role="presentation"
                style="overflow-x: hidden; overflow-y: hidden;"
              >
                <div
                  class="MuiDataGrid-topContainer MuiDataGrid-container--top css-b1wygl"
                  role="presentation"
                >
                  <div
                    class="MuiDataGrid-columnHeaders css-1gtv474-MuiDataGrid-columnHeaders"
                    role="presentation"
                  >
                    <div
                      aria-rowindex="1"
                      class="MuiDataGrid-row--borderBottom css-yseucu-MuiDataGrid-columnHeaderRow"
                      role="row"
                      style="height: 56px;"
                    >
                      <div
                        role="presentation"
                        style="width: 0px;"
                      />
                      <div
                        aria-colindex="1"
                        aria-sort="ascending"
                        class="MuiDataGrid-columnHeader MuiDataGrid-columnHeader--sortable MuiDataGrid-columnHeader--sorted MuiDataGrid-withBorderColor"
                        data-field="priority"
                        role="columnheader"
                        style="width: 120px;"
                        tabindex="0"
                      >
                        <div
                          class="MuiDataGrid-columnHeaderDraggableContainer"
                          draggable="false"
                          role="presentation"
                        >
                          <div
                            class="MuiDataGrid-columnHeaderTitleContainer"
                            role="presentation"
                          >
                            <div
                              class="MuiDataGrid-columnHeaderTitleContainerContent"
                            >
                              <div
                                class="MuiDataGrid-columnHeaderTitle css-1gqmilo-MuiDataGrid-columnHeaderTitle"
                                data-mui-internal-clone-element="true"
                              >
                                Priority
                              </div>
                            </div>
                            <div
                              class="MuiDataGrid-iconButtonContainer css-ltf0zy-MuiDataGrid-iconButtonContainer"
                            >
                              <button
                                aria-label="Sort"
                                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-sortButton css-1vkrt00-MuiButtonBase-root-MuiIconButton-root-MuiDataGrid-sortButton"
                                field="priority"
                                tabindex="-1"
                                title="Sort"
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall MuiDataGrid-sortIcon css-120dh41-MuiSvgIcon-root"
                                  data-testid="ArrowUpwardIcon"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                          <div
                            class="MuiDataGrid-menuIcon"
                          >
                            <button
                              aria-expanded="false"
                              aria-haspopup="menu"
                              aria-label="Priority column menu"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-menuIconButton css-155wbr6-MuiButtonBase-root-MuiIconButton-root"
                              data-mui-internal-clone-element="true"
                              id="«r6»"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                                data-testid="TripleDotsVerticalIcon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                        <div
                          class="MuiDataGrid-columnSeparator MuiDataGrid-columnSeparator--resizable MuiDataGrid-columnSeparator--sideRight"
                          style="min-height: 56px;"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiDataGrid-iconSeparator css-1umw9bq-MuiSvgIcon-root"
                            data-testid="SeparatorIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <rect
                              height="24"
                              rx="0.5"
                              width="1"
                              x="11.5"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        aria-colindex="2"
                        aria-sort="none"
                        class="MuiDataGrid-columnHeader MuiDataGrid-withBorderColor"
                        data-field="type"
                        role="columnheader"
                        style="width: 130px;"
                        tabindex="-1"
                      >
                        <div
                          class="MuiDataGrid-columnHeaderDraggableContainer"
                          draggable="false"
                          role="presentation"
                        >
                          <div
                            class="MuiDataGrid-columnHeaderTitleContainer"
                            role="presentation"
                          >
                            <div
                              class="MuiDataGrid-columnHeaderTitleContainerContent"
                            >
                              <div
                                class="MuiDataGrid-columnHeaderTitle css-1gqmilo-MuiDataGrid-columnHeaderTitle"
                                data-mui-internal-clone-element="true"
                              >
                                Type
                              </div>
                            </div>
                          </div>
                          <div
                            class="MuiDataGrid-menuIcon"
                          >
                            <button
                              aria-expanded="false"
                              aria-haspopup="menu"
                              aria-label="Type column menu"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-menuIconButton css-155wbr6-MuiButtonBase-root-MuiIconButton-root"
                              data-mui-internal-clone-element="true"
                              id="«rc»"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                                data-testid="TripleDotsVerticalIcon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                        <div
                          class="MuiDataGrid-columnSeparator MuiDataGrid-columnSeparator--resizable MuiDataGrid-columnSeparator--sideRight"
                          style="min-height: 56px;"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiDataGrid-iconSeparator css-1umw9bq-MuiSvgIcon-root"
                            data-testid="SeparatorIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <rect
                              height="24"
                              rx="0.5"
                              width="1"
                              x="11.5"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        aria-colindex="3"
                        aria-sort="none"
                        class="MuiDataGrid-columnHeader MuiDataGrid-withBorderColor"
                        data-field="component"
                        role="columnheader"
                        style="width: 180px;"
                        tabindex="-1"
                      >
                        <div
                          class="MuiDataGrid-columnHeaderDraggableContainer"
                          draggable="false"
                          role="presentation"
                        >
                          <div
                            class="MuiDataGrid-columnHeaderTitleContainer"
                            role="presentation"
                          >
                            <div
                              class="MuiDataGrid-columnHeaderTitleContainerContent"
                            >
                              <div
                                class="MuiDataGrid-columnHeaderTitle css-1gqmilo-MuiDataGrid-columnHeaderTitle"
                                data-mui-internal-clone-element="true"
                              >
                                Component
                              </div>
                            </div>
                          </div>
                          <div
                            class="MuiDataGrid-menuIcon"
                          >
                            <button
                              aria-expanded="false"
                              aria-haspopup="menu"
                              aria-label="Component column menu"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-menuIconButton css-155wbr6-MuiButtonBase-root-MuiIconButton-root"
                              data-mui-internal-clone-element="true"
                              id="«rh»"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                                data-testid="TripleDotsVerticalIcon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                        <div
                          class="MuiDataGrid-columnSeparator MuiDataGrid-columnSeparator--resizable MuiDataGrid-columnSeparator--sideRight"
                          style="min-height: 56px;"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiDataGrid-iconSeparator css-1umw9bq-MuiSvgIcon-root"
                            data-testid="SeparatorIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <rect
                              height="24"
                              rx="0.5"
                              width="1"
                              x="11.5"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        aria-colindex="4"
                        aria-sort="none"
                        class="MuiDataGrid-columnHeader MuiDataGrid-withBorderColor"
                        data-field="id"
                        role="columnheader"
                        style="width: 160px;"
                        tabindex="-1"
                      >
                        <div
                          class="MuiDataGrid-columnHeaderDraggableContainer"
                          draggable="false"
                          role="presentation"
                        >
                          <div
                            class="MuiDataGrid-columnHeaderTitleContainer"
                            role="presentation"
                          >
                            <div
                              class="MuiDataGrid-columnHeaderTitleContainerContent"
                            >
                              <div
                                class="MuiDataGrid-columnHeaderTitle css-1gqmilo-MuiDataGrid-columnHeaderTitle"
                                data-mui-internal-clone-element="true"
                              >
                                Issue
                              </div>
                            </div>
                          </div>
                          <div
                            class="MuiDataGrid-menuIcon"
                          >
                            <button
                              aria-expanded="false"
                              aria-haspopup="menu"
                              aria-label="Issue column menu"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-menuIconButton css-155wbr6-MuiButtonBase-root-MuiIconButton-root"
                              data-mui-internal-clone-element="true"
                              id="«rm»"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                                data-testid="TripleDotsVerticalIcon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                        <div
                          class="MuiDataGrid-columnSeparator MuiDataGrid-columnSeparator--resizable MuiDataGrid-columnSeparator--sideRight"
                          style="min-height: 56px;"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiDataGrid-iconSeparator css-1umw9bq-MuiSvgIcon-root"
                            data-testid="SeparatorIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <rect
                              height="24"
                              rx="0.5"
                              width="1"
                              x="11.5"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        aria-colindex="5"
                        aria-sort="none"
                        class="MuiDataGrid-columnHeader MuiDataGrid-withBorderColor MuiDataGrid-columnHeader--lastUnpinned MuiDataGrid-columnHeader--last"
                        data-field="title"
                        role="columnheader"
                        style="width: 800px;"
                        tabindex="-1"
                      >
                        <div
                          class="MuiDataGrid-columnHeaderDraggableContainer"
                          draggable="false"
                          role="presentation"
                        >
                          <div
                            class="MuiDataGrid-columnHeaderTitleContainer"
                            role="presentation"
                          >
                            <div
                              class="MuiDataGrid-columnHeaderTitleContainerContent"
                            >
                              <div
                                class="MuiDataGrid-columnHeaderTitle css-1gqmilo-MuiDataGrid-columnHeaderTitle"
                                data-mui-internal-clone-element="true"
                              >
                                Title
                              </div>
                            </div>
                          </div>
                          <div
                            class="MuiDataGrid-menuIcon"
                          >
                            <button
                              aria-expanded="false"
                              aria-haspopup="menu"
                              aria-label="Title column menu"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-menuIconButton css-155wbr6-MuiButtonBase-root-MuiIconButton-root"
                              data-mui-internal-clone-element="true"
                              id="«rr»"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
                                data-testid="TripleDotsVerticalIcon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                        <div
                          class="MuiDataGrid-columnSeparator MuiDataGrid-columnSeparator--resizable MuiDataGrid-columnSeparator--sideRight"
                          style="min-height: 56px;"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiDataGrid-iconSeparator css-1umw9bq-MuiSvgIcon-root"
                            data-testid="SeparatorIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <rect
                              height="24"
                              rx="0.5"
                              width="1"
                              x="11.5"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="MuiDataGrid-filler"
                        role="presentation"
                      />
                      <div
                        class="MuiDataGrid-scrollbarFiller MuiDataGrid-scrollbarFiller--header"
                        role="presentation"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="MuiDataGrid-virtualScrollerContent css-aymtem-MuiDataGrid-virtualScrollerContent"
                  role="presentation"
                  style="width: auto; flex-basis: 104px; flex-shrink: 0;"
                >
                  <div
                    class="MuiDataGrid-virtualScrollerRenderZone css-11dqcl8-MuiDataGrid-virtualScrollerRenderZone"
                    role="rowgroup"
                    style="transform: translate3d(0, 0px, 0);"
                  >
                    <div
                      aria-rowindex="2"
                      class="MuiDataGrid-row MuiDataGrid-row--firstVisible MuiDataGrid-row--dynamicHeight"
                      data-id="0"
                      data-rowindex="0"
                      role="row"
                      style="max-height: none; min-height: auto; --height: auto;"
                    >
                      <div
                        class="MuiDataGrid-cellOffsetLeft"
                        role="presentation"
                        style="width: 0px;"
                      />
                      <div
                        aria-colindex="1"
                        aria-colspan="1"
                        aria-rowspan="1"
                        class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                        data-colindex="0"
                        data-field="priority"
                        role="gridcell"
                        style="--width: 120px;"
                        tabindex="-1"
                      >
                        <span
                          class="badge bg-secondary priority-1"
                          title="P1 - Blocks development and/or testing work, production could not run."
                        >
                          P1
                        </span>
                      </div>
                      <div
                        aria-colindex="2"
                        aria-colspan="1"
                        aria-rowspan="1"
                        class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                        data-colindex="1"
                        data-field="type"
                        role="gridcell"
                        style="--width: 130px;"
                        tabindex="-1"
                      >
                        <span>
                          Bug
                        </span>
                      </div>
                      <div
                        aria-colindex="3"
                        aria-colspan="1"
                        aria-rowspan="1"
                        class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                        data-colindex="2"
                        data-field="component"
                        role="gridcell"
                        style="--width: 180px;"
                        tabindex="-1"
                        title="component_mock"
                      >
                        component_mock
                      </div>
                      <div
                        aria-colindex="4"
                        aria-colspan="1"
                        aria-rowspan="1"
                        class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                        data-colindex="3"
                        data-field="id"
                        role="gridcell"
                        style="--width: 160px;"
                        tabindex="-1"
                      >
                        <a
                          class="issue-link"
                          href="https://link_mock/"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          0
                        </a>
                      </div>
                      <div
                        aria-colindex="5"
                        aria-colspan="1"
                        aria-rowspan="1"
                        class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                        data-colindex="4"
                        data-field="title"
                        role="gridcell"
                        style="--width: 800px;"
                        tabindex="-1"
                        title="title_mock"
                      >
                        title_mock
                      </div>
                      <div
                        class="MuiDataGrid-cell MuiDataGrid-cellEmpty"
                        role="presentation"
                      />
                    </div>
                    <div
                      aria-rowindex="3"
                      class="MuiDataGrid-row MuiDataGrid-row--lastVisible MuiDataGrid-row--dynamicHeight"
                      data-id="1"
                      data-rowindex="1"
                      role="row"
                      style="max-height: none; min-height: auto; --height: auto;"
                    >
                      <div
                        class="MuiDataGrid-cellOffsetLeft"
                        role="presentation"
                        style="width: 0px;"
                      />
                      <div
                        aria-colindex="1"
                        aria-colspan="1"
                        aria-rowspan="1"
                        class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                        data-colindex="0"
                        data-field="priority"
                        role="gridcell"
                        style="--width: 120px;"
                        tabindex="-1"
                      >
                        <span
                          class="badge bg-secondary priority-1"
                          title="P1 - Blocks development and/or testing work, production could not run."
                        >
                          P1
                        </span>
                      </div>
                      <div
                        aria-colindex="2"
                        aria-colspan="1"
                        aria-rowspan="1"
                        class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                        data-colindex="1"
                        data-field="type"
                        role="gridcell"
                        style="--width: 130px;"
                        tabindex="-1"
                      >
                        <span>
                          Bug
                        </span>
                      </div>
                      <div
                        aria-colindex="3"
                        aria-colspan="1"
                        aria-rowspan="1"
                        class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                        data-colindex="2"
                        data-field="component"
                        role="gridcell"
                        style="--width: 180px;"
                        tabindex="-1"
                        title="component_mock"
                      >
                        component_mock
                      </div>
                      <div
                        aria-colindex="4"
                        aria-colspan="1"
                        aria-rowspan="1"
                        class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                        data-colindex="3"
                        data-field="id"
                        role="gridcell"
                        style="--width: 160px;"
                        tabindex="-1"
                      >
                        <a
                          class="issue-link"
                          href="https://link_mock/"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          1
                        </a>
                      </div>
                      <div
                        aria-colindex="5"
                        aria-colspan="1"
                        aria-rowspan="1"
                        class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                        data-colindex="4"
                        data-field="title"
                        role="gridcell"
                        style="--width: 800px;"
                        tabindex="-1"
                        title="title_mock"
                      >
                        title_mock
                      </div>
                      <div
                        class="MuiDataGrid-cell MuiDataGrid-cellEmpty"
                        role="presentation"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="MuiDataGrid-bottomContainer MuiDataGrid-container--bottom css-gzxaox"
                  role="presentation"
                />
              </div>
              <div
                aria-hidden="true"
                class="MuiDataGrid-scrollbar MuiDataGrid-scrollbar--horizontal css-2n9dey"
                tabindex="-1"
              >
                <div
                  class="MuiDataGrid-scrollbarContent"
                />
              </div>
            </div>
            <div
              class="MuiDataGrid-footerContainer MuiDataGrid-withBorderColor css-15lx25q-MuiDataGrid-footerContainer"
            >
              <div />
              <div
                class="MuiTablePagination-root css-y1ejz4-MuiTablePagination-root"
              >
                <div
                  class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular MuiTablePagination-toolbar css-1gak8h1-MuiToolbar-root-MuiTablePagination-toolbar"
                >
                  <div
                    class="MuiTablePagination-spacer css-1wtxofq-MuiTablePagination-spacer"
                  />
                  <p
                    class="MuiTablePagination-selectLabel css-s09cke-MuiTablePagination-selectLabel"
                    id="«r1»"
                  >
                    Rows per page:
                  </p>
                  <div
                    class="MuiInputBase-root MuiInputBase-colorPrimary MuiTablePagination-select MuiSelect-root MuiTablePagination-input css-oegngy-MuiInputBase-root-MuiTablePagination-select"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="«r1» «r0»"
                      class="MuiSelect-select MuiTablePagination-select MuiSelect-standard MuiInputBase-input css-mmygx2-MuiSelect-select-MuiInputBase-input"
                      id="«r0»"
                      role="combobox"
                      tabindex="0"
                    >
                      20
                    </div>
                    <input
                      aria-hidden="true"
                      aria-invalid="false"
                      class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
                      tabindex="-1"
                      value="20"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiTablePagination-selectIcon MuiSelect-iconStandard css-1gpuzre-MuiSvgIcon-root-MuiSelect-icon"
                      data-testid="ArrowDropDownIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                  </div>
                  <p
                    class="MuiTablePagination-displayedRows css-11cfq65-MuiTablePagination-displayedRows"
                  >
                    1–2 of 2
                  </p>
                  <div
                    class="MuiTablePaginationActions-root MuiTablePagination-actions css-sjsoon-MuiTablePaginationActions-root"
                  >
                    <button
                      aria-label="Go to previous page"
                      class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-colorInherit MuiIconButton-sizeMedium css-h7cjts-MuiButtonBase-root-MuiIconButton-root"
                      disabled=""
                      tabindex="-1"
                      title="Go to previous page"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                        data-testid="KeyboardArrowLeftIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                        />
                      </svg>
                    </button>
                    <button
                      aria-label="Go to next page"
                      class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-colorInherit MuiIconButton-sizeMedium css-h7cjts-MuiButtonBase-root-MuiIconButton-root"
                      disabled=""
                      tabindex="-1"
                      title="Go to next page"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                        data-testid="KeyboardArrowRightIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <style
            href="/MuiDataGridVariables-3851315942"
          >
            .MuiDataGridVariables-3851315942{--DataGrid-t-spacing-unit:8px;--DataGrid-t-color-border-base:rgba(224, 224, 224, 1);--DataGrid-t-color-background-base:#fff;--DataGrid-t-color-background-overlay:#fff;--DataGrid-t-color-background-backdrop:rgba(255, 255, 255, 0.38);--DataGrid-t-color-foreground-base:rgba(0, 0, 0, 0.87);--DataGrid-t-color-foreground-muted:rgba(0, 0, 0, 0.6);--DataGrid-t-color-foreground-accent:#1565c0;--DataGrid-t-color-foreground-disabled:rgba(0, 0, 0, 0.38);--DataGrid-t-color-foreground-error:#c62828;--DataGrid-t-color-interactive-hover:rgba(0, 0, 0, 0.04);--DataGrid-t-color-interactive-hover-opacity:0.04;--DataGrid-t-color-interactive-focus:rgba(from #1976d2 r g b / 1);--DataGrid-t-color-interactive-focus-opacity:0.12;--DataGrid-t-color-interactive-disabled:rgba(from rgba(0, 0, 0, 0.26) r g b / 1);--DataGrid-t-color-interactive-disabled-opacity:0.38;--DataGrid-t-color-interactive-selected:#1976d2;--DataGrid-t-color-interactive-selected-opacity:0.08;--DataGrid-t-header-background-base:#fff;--DataGrid-t-cell-background-pinned:#fff;--DataGrid-t-radius-base:4px;--DataGrid-t-typography-font-family-base:"Roboto", "Helvetica", "Arial", sans-serif;--DataGrid-t-typography-font-weight-light:300;--DataGrid-t-typography-font-weight-regular:400;--DataGrid-t-typography-font-weight-medium:500;--DataGrid-t-typography-font-weight-bold:700;--DataGrid-t-typography-font-body:400 0.875rem / 1.43 "Roboto", "Helvetica", "Arial", sans-serif;--DataGrid-t-typography-font-small:400 0.75rem / 1.66 "Roboto", "Helvetica", "Arial", sans-serif;--DataGrid-t-typography-font-large:400 1rem / 1.5 "Roboto", "Helvetica", "Arial", sans-serif;--DataGrid-t-transition-easing-ease-in:cubic-bezier(0.4, 0, 1, 1);--DataGrid-t-transition-easing-ease-out:cubic-bezier(0.0, 0, 0.2, 1);--DataGrid-t-transition-easing-ease-in-out:cubic-bezier(0.4, 0, 0.2, 1);--DataGrid-t-transition-duration-short:200ms;--DataGrid-t-transition-duration-base:250ms;--DataGrid-t-transition-duration-long:300ms;--DataGrid-t-shadow-base:0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);--DataGrid-t-shadow-overlay:0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);--DataGrid-t-z-index-panel:1300;--DataGrid-t-z-index-menu:1300;}
          </style>
        </div>
      </div>
    </div>
  </div>
</div>
`;
